<resources>
    <string name="app_name">TellMe</string>
    <string name="typing">typing...</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="message_box_empty">Message box is empty</string>
    <string name="username">User Name</string>
    <string name="status">Status</string>
    <string name="enter_message_tv">Enter message</string>
    <string name="send_btn">Send</string>
    <string name="delivered">delivered</string>
    <string name="seen">seen</string>
    <string name="message_deleted">message deleted</string>
    <string name="change_picture">Do you want to change your picture?</string>
    <string name="change_picture_title">Change picture</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_account">Already have an account</string>
    <string name="login">Login</string>
    <string name="back_register">Back to registration</string>
    <string name="chat">Chat</string>
    <string name="Settings">Settings</string>
    <string name="Search_hint">Search...</string>
    <string name="Change_name">Change your name</string>
    <string name="Change_status">Change your status</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Image">Image</string>
    <string name="phone_sign_in">"SIGN IN BY PHONE"</string>
    <string name="our_terms">By tapping Sign in, you agree to our Terms. You can review the Privacy Policy and Cookie Policy to learn how we process your data.</string>
    <string name="number_info_tv">Tap Continue and TellMe will send you an SMS with the verification code. Messages and data may incur charges. You can sign in with a verified phone number. Find out what happens if the number changes.</string>
    <string name="continue_btn">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_tv">My Number</string>

</resources>