<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:layout_margin="2dp"
    android:orientation="vertical">

    <!-- NOTE: This list should be displayed in a list
    instead of nested layouts -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:textColor="@color/white"
            android:id="@+id/Change_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/Change_name"
            android:hint=""
            android:textSize="17sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changedNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:hint="@string/username"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="3dp">

        <Button
            android:text="@string/Cancel"
            android:layout_width="wrap_content"
            android:id="@+id/CancelButton"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"

            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Save">

        </Button>



    </LinearLayout>

</LinearLayout>