<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment">

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:gravity="start"
        android:text="@string/number_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number">

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code_picker"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="115dp"

            android:layout_height="43dp">

        </com.hbb20.CountryCodePicker>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_phone_number_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:textAlignment="center"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="107dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/number_info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/number_info_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    </TextView>

    <Button
        android:id="@+id/send_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/helveticaboldcondensed"
        android:text="@string/send_btn"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_info_tv" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_code_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Input_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Input_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Input_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Input_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Input_5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Input_6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp">

        </com.google.android.material.textfield.TextInputEditText>


    </LinearLayout>

    <Button
        android:id="@+id/code_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/helveticaboldcondensed"
        android:textColor="@color/black"
        android:background="@drawable/button_style"
        android:text="@string/continue_btn"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll" />

    <TextView
        android:id="@+id/resend_tv"
        android:layout_width="119dp"
        android:layout_height="29dp"
        android:text="Resend"
        android:textAlignment="center"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_continue_button"
        app:layout_constraintVertical_bias="0.0">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>